--- a/startpage.html
+++ b/startpage.html
@@ -128,6 +128,7 @@
   <script>
     function startGame() {
       alert("The adventure begins! Arrr, matey!");
+      window.location.href = "index.html"; 
     }
   </script>
 
