--- a/successpage.html
+++ b/successpage.html
@@ -119,7 +119,7 @@
     function restartGame() {
       alert("The journey continues! Let’s go again!");
       // Redirect to the game start page (if needed)
-      // window.location.href = "index.html"; 
+      window.location.href = "index.html"; 
     }
   </script>
 
