added graph to map and associated coins

--- a/explanation.html
+++ b/explanation.html
@@ -91,10 +91,10 @@
     <script>
         // Example of player's moves and their reasoning
         const moves = [
-            { step: 1, location: "Isle of Gold", coins: 50, distance: 20 },
-            { step: 2, location: "Cave of Riches", coins: 100, distance: 35 },
-            { step: 3, location: "Treasure Lagoon", coins: 75, distance: 15 },
-            { step: 4, location: "Fortune's Cove", coins: 125, distance: 10 },
+            { step: 1, location: "Isle of Gold", coins: 10, distance: 35 },
+            { step: 2, location: "Cave of Riches", coins: 10, distance: 15 },
+            { step: 3, location: "Treasure Lagoon", coins: 10, distance: 10 },
+            { step: 4, location: "Fortune's Cove", coins: 10, distance: 25 },
         ];
 
         // Explanation container
@@ -115,7 +115,7 @@
 
         // Redirect to success page
         function goToSuccess() {
-            window.location.href = "success.html"; // Update with actual success page URL
+            window.location.href = "successpage.html"; // Update with actual success page URL
         }
     </script>
 </body>
